Changed color of progress bar and text, also fixed text spacing

--- a/src/assets/sass/components/cart/shipping.scss
+++ b/src/assets/sass/components/cart/shipping.scss
@@ -61,7 +61,7 @@ label.checkout-label {
 
 .shipping-form-container {
   height: 100%;
-  margin-left: 40px;
+  margin-left: 5px;
   padding: 1vh;
   a {
     word-break: break-all;
@@ -161,6 +161,14 @@ label.checkout-label {
     #title {
       color: orange;
     }
+  }
+
+  h1 {
+    color: white;
+  }
+
+  p {
+    color: white ;
   }
 
   .customer-email {
